@@ -19,6 +19,7 @@ This project is **not** going to implement a complex featureset like that of [Go
 It should be easy, to add new sensors and export targets.
 
 ## Features
+
 - Free software (GPLv2 licensed)
 - Read data from fitness tracking sensors
 - Nice user interface to easily select and connect to devices
@@ -46,23 +47,6 @@ It should be easy, to add new sensors and export targets.
   - Create a new subtype of `Chart` and implement the UI for adding it
 
 ## Building
-Currently there are no Maven or Gradle build files available. The project has to be imported using IntelliJ IDEA and built from there.
-
-Before building, the following dependencies have to be installed:
-
-- Saving the configuration
-  - [`com.fasterxml.jackson.core:jackson-databind:2.10.1`](https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind/2.10.1)
-- *Tail*ing a file
-  - [`commons-io:commons-io:2.6`](https://mvnrepository.com/artifact/commons-io/commons-io/2.6)
-- Recording to databases
-  - `exposed-core-0.18.1`
-  - `exposed-jdbc-0.18.1`
-  - `joda-time:joda-time:2.5` (runtime dependency of `exposed`)
-  - `org.postgresql:postgresql:42.2.5`
-- Connecting to ANT+ sensors
-  - [j-antplus](https://github.com/glever/j-antplus)
-- Logging (also run-time dependency of some other dependencies)
-  - `org.slf4j:slf4j-api:1.7.11`
 
 The project targets JDK11 and Kotlin language version 1.3.
 
@@ -70,7 +54,7 @@ The project targets JDK11 and Kotlin language version 1.3.
 
 Install:
 
-- Bazel 4.2
+- Bazel 4.2 (or higher)
 - OpenJDK11
 
 If you have Nix installed, you can get a shell with the dependencies like this:
@@ -86,17 +70,20 @@ Run:
 bazel build //:Cli \
   && ./bazel-bin/Cli
 
-# GUI (JavaFX)
+# GUI (Needs JavaFX installed)
 bazel build //:Gui \
   && ./bazel-bin/Gui
+
+# GUI (JavaFX bundled into the JAR)
+bazel build //:Gui_deploy.jar \
+  && ./bazel-bin/Gui_deploy.jar
 ```
 
 ## Running the jar
-1. Get it from the [releases page](https://github.com/JohnAZoidberg/SensorWrangler/releases)
+
+1. Get it from the [Releases](https://github.com/JohnAZoidberg/SensorWrangler/releases) or [Actions](https://github.com/JohnAZoidberg/SensorWrangler/actions) page
 2. Download JDK11 from [AdoptOpenJDK](https://adoptopenjdk.net/releases.html?variant=openjdk11&jvmVariant=hotspot)
-3. Download JavaFX11 LTS from [Gluon](https://gluonhq.com/products/javafx/)
-4. Extract both to the directories `jdk-11` and `javafx-sdk-11` respectively
-5. Run `jdk-11\bin\java.exe -p javafx-sdk-11\lib --add-modules javafx.controls -jar SensorWrangler.jar`
+3. Run `java -cp Gui_deploy.jar`
 
 ## Supported Devices and other Sensors
 
@@ -150,6 +137,9 @@ sensor, which opens up a port on localhost and generates random values.
 
 ## Recorders
 
+Recorders can capture values from the sensor and make them available outside of
+SensorWrangler.
+
 ### CsvRecorder
 Record to a CSV formatted file. Can be `tail -f`ed
 
@@ -167,6 +157,14 @@ To use a different database, check the [supported](https://github.com/JetBrains/
 
 ### Socket recorder
 Opens a TCP socket and writes CSV formatted lines to client sockets.
+
+For example you can create a socket recorder at port 8080 and connect to it via telnet:
+
+```sh
+telnet localhost 8080
+```
+
+and it will start printing the measured values in the same format as the CSV recorder.
 
 ## Charts
 See the above GIF for examples.
